update-manager (1:0.125) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * integrate base-installer as a sub-component into the
    release upgrader and use the base-installer/kernel/*.sh
    functionality to ensure we select the most appropriate
    kernel on upgrade
    NOT TESTED YET
  
  [ Steve Langasek ]
  * Refresh .pot file (and .po files) so that new UI strings are available
    for translation in LP.  LP: #425014.

 -- Michael Vogt <egon@top.ping.de>  Fri, 04 Sep 2009 21:21:09 +0200

update-manager (1:0.124.11) karmic; urgency=low

  * DistUpgrade/DistUpgradeView.py:
    - capture exceptions from pm.DoInstall() properly (fixes a 
      hang when a package fails to install)
  * DistUpgrade/DistUpgradeViewGtk.py, DistUpgrade/DistUpgradeViewKDE.py:
    - return the full status of the exited child, not only the
      return code

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 04 Sep 2009 10:57:06 +0200

update-manager (1:0.124.10) karmic; urgency=low

  * DistUpgrade/removal_blacklist.cfg:
    - add update-manager so that it does not 
  * typo fixes (thanks to Brian Murray, LP: #418127)
  * merge the changes of seb128 into bzr
  * po/POTFILES.in:
    - fix ui file detection (thanks to Gabor Kelemen) LP: #420209
  * DistUpgrade/DistUpgrade.ui:
    - fix duplicated id (LP: #422665)
  * fix crash when lsmod is not installed

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 02 Sep 2009 15:04:53 +0200

update-manager (1:0.124.9ubuntu1) karmic; urgency=low

  * Clean build directory

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 31 Aug 2009 22:19:51 +0200

update-manager (1:0.124.9) karmic; urgency=low

  * data/glade/UpdateManager.ui:
    - don't use some duplicated ids to fix update-manager not starting
      due to the new gtk version

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 31 Aug 2009 22:02:20 +0200

update-manager (1:0.124.8) karmic; urgency=low

  * make the release-upgrader auto selection for the frontend
    more robust when no DISPLAY is avaiable