@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<interface>
+<interface domain="update-manager">
   <!-- interface-requires gtk+ 2.6 -->
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkWindow" id="window_main">
