@@ -5,7 +5,12 @@ update-manager (1:0.125) UNRELEASED; urgency=low
     release upgrader and use the base-installer/kernel/*.sh
     functionality to ensure we select the most appropriate
     kernel on upgrade
-    NOT TESTED YET
+  * UpdateManager/Core/UpdateList.py, UpdateManager/UpdateManager.py:
+    - filter warnings
+  * UpdateManager/SimpleGtkbuilderApp.py:
+    - use logging instead of sys.stderr
+  * data/glade/UpdateManager.ui:
+    - set explicit translation domain
   
   [ Steve Langasek ]
   * Refresh .pot file (and .po files) so that new UI strings are available
